dnl Process this file with autoconf to produce a configure script.
AC_INIT(gofe.c)
AM_INIT_AUTOMAKE(gofe, 0.1.1)

dnl Checks for programs.
AC_PROG_CC

dnl Checks for libraries.
AC_CHECK_LIB(gtk, main)

dnl Checks for header files.
AC_CHECK_HEADERS(unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.
AC_FUNC_VFORK

AC_OUTPUT(Makefile)
